--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand p-0" href="/">
-          <img src="photo/Angel.png" alt="Ангелочек!" width="100" />
-        </a>
+        <!-- <a class="navbar-brand p-0" href="/"> -->
+        <img src="photo/Angel.png" alt="Ангелочек!" width="100" />
+        <!-- Нужно найти ответ на отсылку на определенную фотографию -->
+        <!-- </a> -->
         <button
           class="navbar-toggler"
           type="button"
@@ -64,6 +65,12 @@
             <li class="nav-item">
               <a class="nav-link" href="places.html">Любимые места</a>
             </li>
+            <li class="nav-iten">
+              <a href="work.html" class="nav-link">Работа</a>
+            </li>
+            <li>
+              <a href="All_CSS.html" class="nav-link">All_CSS</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -72,12 +79,15 @@
       <div class="row">
         <div class="col-lg-6 col-md-8 mx-auto">
           <img class="rounded-img" src="photo/зайка_1.png" alt="Serafim" />
+          <p class="text-black-50">
+            ↑↑↑ <br />
+            Кликни на иконку
+          </p>
           <h1 class="fw-light">Серафим Беляев</h1>
           <p class="lead text-muted">
-            <b>
-              Хороший пацан. Анимешник правда, но пацан хороший! C бабами романы
-              не крутит, водку не пьет, не курит. Короче, примерный мужик
-            </b>
+            Хороший пацан. Анимешник правда, но пацан хороший! C бабами романы
+            не крутит, водку не пьет, не курит. Короче, примерный мужик. А самое
+            главное - учиться писать сайты на целый 3 языках. Поддержите его!
           </p>
           <a
             href="http://www.youtube.com/@Serafimoftheend-pw3vt"
@@ -176,11 +186,12 @@
         </div>
       </div> -->
     </div>
-    <footer class="footer p-0">
+    <footer class="p-0 text-center text-white-50">
       <p>
         Сайт сделан для собственного развлечения. Никакой ценной информации не
         несет.
       </p>
     </footer>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
