--- a/places.html
+++ b/places.html
@@ -60,6 +60,12 @@
             <li class="nav-item">
               <a class="nav-link active" href="places.html">Любимые места</a>
             </li>
+            <li class="nav-iten">
+              <a href="work.html" class="nav-link">Работа</a>
+            </li>
+            <li>
+              <a href="All_CSS.html" class="nav-link">All_CSS</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -135,7 +141,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer p-0">
+    <footer class="footer p-0 text-center text-white-50">
       <p>
         Сайт сделан для собственного развлечения. Никакой ценной информации не
         несет.
