--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Беляев Серафим</title>
+    <meta
+      name="keywords"
+      content="angel, wings, wind, angel without wings, serafim of the end"
+    />
+    <title>Сайт юного разработчика</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -69,6 +73,9 @@
               <a href="work.html" class="nav-link">Работа</a>
             </li>
             <li>
+              <a href="College_HTML.html" class="nav-link">College_HTML</a>
+            </li>
+            <li>
               <a href="All_CSS.html" class="nav-link">All_CSS</a>
             </li>
           </ul>
@@ -83,7 +90,9 @@
             ↑↑↑ <br />
             Кликни на иконку
           </p>
-          <h1 class="fw-light">Серафим Беляев</h1>
+          <h1 class="fw-light">
+            <acronym title="Беляев Серафим">Serafim of the end</acronym>
+          </h1>
           <p class="lead text-muted">
             Хороший пацан. Анимешник правда, но пацан хороший! C бабами романы
             не крутит, водку не пьет, не курит. Короче, примерный мужик. А самое
