--- a/places.html
+++ b/places.html
@@ -64,6 +64,9 @@
               <a href="work.html" class="nav-link">Работа</a>
             </li>
             <li>
+              <a href="College_HTML.html" class="nav-link">College_HTML</a>
+            </li>
+            <li>
               <a href="All_CSS.html" class="nav-link">All_CSS</a>
             </li>
           </ul>
@@ -141,7 +144,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer p-0 text-center text-white-50">
+    <footer class="p-0 text-center text-white-50">
       <p>
         Сайт сделан для собственного развлечения. Никакой ценной информации не
         несет.
