--- a/All_CSS.html
+++ b/All_CSS.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Беляев Серафим</title>
+    <title>All_CSS</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -66,6 +66,9 @@
             </li>
             <li class="nav-iten">
               <a href="work.html" class="nav-link">Работа</a>
+            </li>
+            <li>
+              <a href="College_HTML.html" class="nav-link">College_HTML</a>
             </li>
             <li>
               <a href="All_CSS.html" class="nav-link active">All_CSS</a>
