--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Беляев Серафим</title>
+    <title>Работа по программированию</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -38,8 +38,9 @@
     />
     <link rel="manifest" href="photo/site.webmanifest" />
     <!-- Значек на сайте -->
-
+    <script src="https://code.iconify.design/iconify-icon/2.0.0/iconify-icon.min.js"></script>
     <link rel="stylesheet" href="style/work.css" />
+    <link rel="stylesheet" href="fonts/iconmoon/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -68,6 +69,9 @@
               <a href="work.html" class="nav-link active">Работа</a>
             </li>
             <li>
+              <a href="College_HTML.html" class="nav-link">College_HTML</a>
+            </li>
+            <li>
               <a href="All_CSS.html" class="nav-link">All_CSS</a>
             </li>
           </ul>
@@ -77,8 +81,104 @@
     <header class="g-50">
       <h2 class="text-hide">Работа с градиентом</h2>
       <h1>Modern Frontend Monitoring and Product Analytics</h1>
+      <h2 class="text-hide">Работа с тектом</h2>
+      <h3><s>Зачеркнутый текст</s></h3>
+      <h2 class="text-hide">Работа с иконками</h2>
+      <svg
+        version="1.0"
+        xmlns="http://www.w3.org/2000/svg"
+        width="128px"
+        height="128px"
+        viewBox="0 0 512.000000 512.000000"
+        preserveAspectRatio="xMidYMid meet"
+      >
+        <metadata>
+          Created by potrace 1.16, written by Peter Selinger 2001-2019
+        </metadata>
+        <g
+          transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)"
+          fill="#000000"
+          stroke="none"
+        >
+          <path
+            d="M1201 3808 c-415 -52 -773 -410 -830 -831 -7 -47 -11 -288 -11 -598
+  l0 -519 139 0 140 0 3 548 c4 606 4 596 73 737 88 180 259 319 455 371 57 15
+  137 18 618 21 l552 4 0 -420 0 -421 -780 0 -780 0 0 -140 0 -140 780 0 780 0
+  0 -280 0 -280 140 0 140 0 0 980 0 980 -672 -1 c-370 -1 -706 -6 -747 -11z"
+          />
+          <path
+            d="M3598 3390 c-254 -43 -464 -202 -574 -435 -58 -123 -78 -227 -71
+  -369 17 -326 215 -583 537 -697 63 -22 78 -23 458 -27 l392 -3 0 140 0 141
+  -342 0 c-371 0 -398 3 -507 56 -110 54 -221 197 -250 324 -38 164 19 341 147
+  462 78 72 161 114 257 128 39 5 242 10 453 10 l382 0 0 -691 0 -691 -26 -49
+  c-15 -27 -44 -60 -68 -76 l-41 -28 -597 -3 -598 -3 0 -140 0 -140 623 3 624 3
+  84 42 c133 66 230 179 263 308 14 51 16 173 16 902 l0 843 -557 -1 c-307 -1
+  -579 -5 -605 -9z"
+          />
+        </g>
+      </svg>
+      <h5 class="text-black-50">
+        Проблемы:
+        <ol>
+          <li>Огромный размер кода</li>
+          <li>Нельзя менять свойство color: в img or object через CSS</li>
+          <li>Нельзя применять ссылку в object</li>
+          <li>Нельзя задать размер иконки через свойство font-size</li>
+        </ol>
+        Плюсы:
+        <ol>
+          <li>Сымый простой вариант</li>
+          <li>Используется для не большого количества иконок - 5-10 штук</li>
+          <li>Нет именение цвета самих иконок</li>
+        </ol>
+      </h5>
     </header>
-    <footer class="footer p-0 text-center text-white-50">
+    <i class="icon icon_home"></i>
+    <i class="icon icon_mail"></i>
+    <h5 class="text-black-50">
+      Проблемы:
+      <ol>
+        <li>Очень долгая подготовка</li>
+        <li>Нельзя менять свойство color: через CSS</li>
+      </ol>
+      Плюсы:
+      <ol>
+        <li>Небольшой HTML код</li>
+        <li>Использование по особым случаям</li>
+      </ol>
+    </h5>
+    <iconify-icon icon="ri:plane-line"></iconify-icon>
+    <h5 class="text-black-50">
+      Самый лучший вариант <br />
+      Плюсы:
+      <ol>
+        <li>Очень быстрое и простое подключение значков</li>
+        <li>Легко меняется цвет иконки</li>
+        <li>Размер задается через font-size в CSS</li>
+        <li>Занимает очень мало пространства HTML кода</li>
+      </ol>
+      Минус:
+      <ol>
+        <li>Подключение стороннего сервиса</li>
+      </ol>
+    </h5>
+    <i class="icon-angel"></i>
+    <h5 class="text-black-50">
+      Создание иконок вручную (самый лучший собственный вариант) <br />
+      Плюсы:
+      <ol>
+        <li>Легко меняется цвет иконки</li>
+        <li>Размер задается через font-size в CSS</li>
+        <li>Занимает очень мало пространства HTML кода</li>
+        <li>Простая поддержка и обновление иконок</li>
+        <li>Эокономия пространства и увелечение скорости загрузки сайта</li>
+      </ol>
+      Минус:
+      <ol>
+        <li>Тратиться чуть больше времени чем предыдущий вариант</li>
+      </ol>
+    </h5>
+    <footer class="p-0 text-center text-white-50">
       <p>
         Сайт сделан для собственного развлечения. Никакой ценной информации не
         несет.
