--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
       name="keywords"
       content="angel, wings, wind, angel without wings, serafim of the end"
     />
-    <title>Сайт юного разработчика</title>
+    <meta
+      name="description"
+      content="angel, wings, wind, angel without wings, serafim of the end"
+    />
+    <title>Сайт юного разработчика | Serafim-of-the-end</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
